--- a/themes/custom/less/common/main.less
+++ b/themes/custom/less/common/main.less
@@ -4,6 +4,12 @@
                 MAIN.LESS
 -----------------------------------------*/
 
+body {
+    margin-bottom:80px;
+
+}
+
+
 .unit-banner {
     height:40px;
     width:100%;
